wrap output it html document & body

ensure right encoding is set

BUG: 500515
(cherry picked from commit 7ef31a797717bf1a86304f8aa18c68ace85d7afe)